[package]
name = "oysterpack_trust_nng"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
oysterpack_trust = {path = "../oysterpack-trust", version = "0.1"}
oysterpack_uid = {path = "../oysterpack-uid", version = "0.2"}
oysterpack_log = {path = "../oysterpack-log", version = "0.1" }

futures-preview = "0.3.0-alpha.13"
serde = {version = "1", features = ["derive"] }
parking_lot = {version ="0.7.1", features = ["nightly"] }
hashbrown = {version = "0.1.8", features = ["serde"]}
prometheus = {version = "0.5.0", features = ["nightly", "gen", "push", "process"] }
num_cpus = "1.10.0"
failure = "0.1.5"
lazy_static = "1.3.0"
url = "1.7.2"
url_serde = "0.2.0"

nng = {git = "https://gitlab.com/oysterpack.inc/nng-rs.git"}
nng-sys = "0.1.3"

[dev-dependencies]
version-sync = "0.7"
criterion = "0.2.10"
pretty_assertions = "0.6.1"
cucumber_rust = "0.5.1"
serde_json = "1.0.39"

[badges]
maintenance = {status = "actively-developed"}

[[test]]
name = "cucumber_reqrep_client_registry"
harness = false

[[bench]]
name = "nng_reqrep_bench"
harness = false