[package]
name = "oysterpack_trust"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version = "0.3"}
oysterpack_app_metadata_macros = {path = "../oysterpack-app-metadata-macros", version = "0.1"}
oysterpack_uid = {path = "../oysterpack-uid", version = "0.2"}
oysterpack_log = {path = "../oysterpack-log", version = "0.1" }
oysterpack_events = {path = "../oysterpack-events", version = "0.1"}
oysterpack_errors = {path = "../oysterpack-errors", version = "0.1"}

futures-preview = "0.3.0-alpha.12"

sodiumoxide = "0.2.0"
bs58 = "0.2.2"
chrono = "0.4.6"
num_cpus = "1.9.0"
failure = "0.1.5"
lazy_static = {version = "1.2.0", features = ["nightly"] }

url = "1.7.2"
url_serde = "0.2.0"

serde = {version = "1", features = ["derive"] }
bincode = {version = "1", features = ["i128"]}
parity-snappy = "0.1.0"

nng = {git = "https://gitlab.com/oysterpack.inc/nng-rs.git"}
nng-sys = "0.1.3"
crossbeam = "0.7.1"
fnv = "1.0.6"
smallvec = { version = "0.6.8", features = ["serde"] }

prometheus = {version = "0.5.0", features = ["nightly", "gen", "push", "process"] }
quanta = "0.1.0"

[dev-dependencies]
version-sync = "0.7"
criterion = "0.2.8"
pretty_assertions = "0.5.1"
serde_json = "1.0.37"

[badges]
maintenance = {status = "actively-developed"}

[[bench]]
name = "reqrep_bench"
harness = false

[[bench]]
name = "nng_reqrep_bench"
harness = false

[[bench]]
name = "metrics_bench"
harness = false
