[package]
name = "oysterpack_trust"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
oysterpack_uid = {path = "../oysterpack-uid", version = "0.2"}
oysterpack_log = {path = "../oysterpack-log", version = "0.1" }

futures-preview = {version = "0.3.0-alpha.13", features = ["compat"] }

num_cpus = "1.10.0"
failure = "0.1.5"
lazy_static = "1.3.0"
maplit = "1.0.1"

serde = {version = "1", features = ["derive"] }

parking_lot = {version ="0.7.1", features = ["nightly"] }
hashbrown = {version = "0.1.8", features = ["serde"]}
smallvec = { version = "0.6.9", features = ["serde"] }

prometheus = {version = "0.5.0", features = ["nightly", "gen", "push", "process"] }

[dev-dependencies]
version-sync = "0.7"
criterion = "0.2.10"
pretty_assertions = "0.6.1"
cucumber_rust = "0.5.1"
serde_json = "1.0.39"
float-cmp = "0.4.0"

[badges]
maintenance = {status = "actively-developed"}

[[test]]
name = "cucumber_metrics_collectors"
harness = false

[[test]]
name = "cucumber_metrics_descriptors"
harness = false

[[test]]
name = "cucumber_metrics_gathering"
harness = false

[[test]]
name = "cucumber_metrics_registry"
harness = false

[[test]]
name = "cucumber_metrics_support"
harness = false

[[test]]
name = "cucumber_execution_executor"
harness = false

[[test]]
name = "cucumber_execution_registry"
harness = false

[[test]]
name = "cucumber_execution_metrics"
harness = false

[[test]]
name = "cucumber_reqrep_client"
harness = false

[[test]]
name = "cucumber_reqrep_config"
harness = false

[[test]]
name = "cucumber_reqrep_metrics"
harness = false

[[test]]
name = "cucumber_reqrep_service"
harness = false

[[bench]]
name = "reqrep_bench"
harness = false

[[bench]]
name = "metrics_bench"
harness = false

[[bench]]
name = "executor_bench"
harness = false