[package]
name = "oysterpack_uid"
version = "0.2.2"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack UID is used to generate unique identifiers"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-uid"
documentation = "https://docs.rs/oysterpack_uid"
readme = "README.md"
keywords = ["ulid"]
edition = "2018"

[dependencies]
rusty_ulid = "0.6"
chrono = "0.4.6"
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
version-sync = "0.6"
serde_json = "1.0.32"
uuid = { version = "0.6", features = ["v4","serde"] }

[badges]
maintenance = {status = "actively-developed"}