[package]
name = "oysterpack_uid"
version = "0.2.3"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack UID is used to generate unique identifiers"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-uid"
documentation = "https://docs.rs/oysterpack_uid"
readme = "README.md"
keywords = ["ulid"]
edition = "2018"

[dependencies]
rusty_ulid = "0.7"
chrono = "0.4.6"
serde = {version = "1", features = ["derive"]}
oysterpack_macros = "0.1"
byteorder = "1.2.7"

clap = {version = "2.32.0", optional = true}

[dev-dependencies]
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
version-sync = "0.6"
serde_json = "1.0.32"
bincode = {version = "1", features = ["i128"]}
uuid = { version = "0.6", features = ["v4","serde"] }
criterion = "0.2.5"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = []
cli = ["clap"]

[[bench]]
name = "ulid_bench"
harness = false