[package]
name = "oysterpack_uid"
version = "0.2.3"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack UID is used to generate unique identifiers"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-uid"
documentation = "https://docs.rs/oysterpack_uid"
readme = "README.md"
keywords = ["ulid"]
edition = "2018"

[dependencies]
oysterpack_uid_macros = { version = "0.1", path = "../oysterpack-uid-macros" }

rusty_ulid = "0.7"
chrono = "0.4.6"
serde = {version = "1", features = ["derive"]}
byteorder = "1.2.7"
failure = "0.1.3"

[dev-dependencies]
version-sync = "0.7"
serde_json = "1.0.32"
bincode = {version = "1", features = ["i128"]}
uuid = { version = "0.6", features = ["v4","serde"] }
criterion = "0.2.8"

[badges]
maintenance = {status = "actively-developed"}

[[bench]]
name = "ulid_bench"
harness = false