[package]
name = "oysterpack"
version = "0.1.1" # remember to update html_root_url
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Rust Platform"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
readme = "README.md"

[dependencies]
oysterpack_uid = {path = "../oysterpack-uid", version = "0.1"}
oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version = "0.2"}

[dev-dependencies]
version-sync = "0.5"
log = "0.4.5"
simple-logging = "2.0.1"
semver = "0.9.0"

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]
maintenance = { status = "actively-developed" }
