[package]
name = "oysterpack"
version = "0.2.1"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Rust Platform"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
readme = "README.md"

[dependencies]
oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version = "0.3"}
oysterpack_app_metadata_macros = {path = "../oysterpack-app-metadata-macros", version="0.1"}
oysterpack_uid = {path = "../oysterpack-uid", version = "0.1"}
oysterpack_macros = {path = "../oysterpack-macros", version = "0.1"}

serde = "1"
serde_derive = "1"

semver = {version = "0.9", features = ["serde"]}
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
version-sync = "0.5"

log = "0.4.5"
simple-logging = "2.0.1"
semver = "0.9.0"
serde_json = "1.0.32"

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]
maintenance = { status = "actively-developed" }