[package]
name = "oysterpack_snap_ulid"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "ULID utility (https://github.com/ulid/spec)"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/snaps/oysterpack-snap-ulid"
documentation = "https://docs.rs/oysterpack_uid"
readme = "README.md"
keywords = ["ulid"]
edition = "2018"

[dependencies]
oysterpack_uid = {version = "0.2.3", path = "../../oysterpack-uid"}
structopt = "0.2.14"
exitfailure = "0.5.1"
failure = "0.1.3"

[dev-dependencies]
assert_cmd = "0.10.2"
predicates = "1.0.0"
